--- a/index.html
+++ b/index.html
@@ -8,33 +8,69 @@
 <body>
     <div class="header">
         <nav class="nav">
-            <div class="logo"></div>
+            <div class="logo">Header Logo</div>
             <ul>
-                <li class="links"></li>
-                <li class="links"></li>
-                <li class="links"></li>
+                <li class="links">header link one</li>
+                <li class="links">header link two</li>
+                <li class="links">header link three</li>
             </ul>
         </nav>
         <div class="title">
-            <div class="signup"></div>
+            <div class="signup">
+                <div class="awesome">This Website is Awesome</div>
+                <p>This website has some subtext that goes here under the main title. 
+                    It's a smaller font and the color is lower contrast</p>
+                <button>
+                    Sign up
+                </button>
+            </div>
             <img src="" alt="" class="image">
         </div>
     </div>
     <div class="container">
         <div class="info">
-            <div class="t_card"></div>
+            <div class="t_card">
+                Some random information
+            </div>
             <div class="deck">
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
-                <div class="cards"></div>
+                <div class="cards">
+                    <img src="" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="cards">
+                    <img src="" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                </div>
+                <div class="cards">
+                    <img src="" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                </div>
+                <div class="cards">
+                    <img src="" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                </div>
             </div>
         </div>
         <div class="quote">
-            
+            <blockquote>
+                This is an inspiring quote, or a testimonial
+                from a customer. Maybe it's just filling up space, or maybe people will actually read it. 
+                Who knows? All I know is taht it looks nice. -Thor, God of Thunder
+            </blockquote>
         </div>
-        <div class="action"></div>
+        <div class="action">
+            <div class="a_time">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>
+                Sign up
+            </button>
+        </div>
     </div>
-    <footer class="footer"></footer>
+    <footer class="footer">Copyright © The Odin Project 2021</footer>
 </body>
 </html>
