--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flexbox Project</title>
 </head>
 <body>
     <div class="header">
@@ -20,7 +21,7 @@
                 <div class="awesome">This Website is Awesome</div>
                 <p>This website has some subtext that goes here under the main title. 
                     It's a smaller font and the color is lower contrast</p>
-                <button>
+                <button class="h_button">
                     Sign up
                 </button>
             </div>
