--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="title">
             <div class="signup">
                 <div class="awesome">This Website is Awesome</div>
-                <p>This website has some subtext that goes here under the main title. 
+                <div class="s_text">This website has some subtext that goes here under the main title. 
                     It's a smaller font and the color is lower contrast</p>
                 <button class="h_button">
                     Sign up
                 </button>
             </div>
-            <img src="" alt="" class="image">
+            <img src="https://source.unsplash.com/random/400x200" alt="" class="image">
         </div>
     </div>
     <div class="container">
@@ -35,21 +35,21 @@
             </div>
             <div class="deck">
                 <div class="cards">
-                    <img src="" alt="">
+                    <img src="https://source.unsplash.com/random/100x100" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="cards">
-                    <img src="" alt="">
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                </div>
-                <div class="cards">
-                    <img src="" alt="">
+                    <img src="https://source.unsplash.com/random/100x100" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 </div>
                 <div class="cards">
-                    <img src="" alt="">
+                    <img src="https://source.unsplash.com/random/100x100" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                </div>
+                <div class="cards">
+                    <img src="https://source.unsplash.com/random/100x100" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 </div>
